/**
 * # hinTS Key Publication Transaction
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package com.hedera.hapi.services.auxiliary.hints;

/*
 * Copyright (C) 2024 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.hedera.hapi.services.auxiliary.hints.legacy";
// <<<pbj.java_package = "com.hedera.hapi.services.auxiliary.hints">>> This comment is special code for setting PBJ Compiler java package

option java_multiple_files = true;

/**
 * A transaction body to publish a node's hinTS key for a certain
 * maximum universe size. A hinTS key is an "extended" public key;
 * that is, a BLS public key combined with hints a signature
 * aggregator can use to prove its aggregate public key by a SNARK
 * for the aggregate secret key.
 * <p>
 * This transaction is the only way a node can set its hinTS key
 * for use in hinTS constructions for rosters with node counts
 * in the range [2^(k-1), 2^k). As a result, this transaction's
 * handler is the place in the protocol that assigns a node a
 * hinTS party id for a certain universe size.
 */
message HintsKeyPublicationTransactionBody {
  /**
   * The base-2 logarithm "k" of the maximum universe size for this
   * publication.
   * <p>
   * This value MUST be set to a positive integer.<br/>
   */
  uint32 max_size_log_2 = 1;

  /**
   * The creating node's BLS public key to use in subsequent hinTS
   * constructions targeting rosters with node counts in the range
   * [2^(k-1), 2^k).
   * <p>
   * This value MUST be set.<br/>
   * This value MUST NOT be empty.<br/>
   * This value MUST contain a valid BLS public key.
   */
  bytes bls_public_key = 2;

  /**
   * The secret key hints that "extend" the BLS public key for use
   * in hinTS constructions targeting rosters with node counts in
   * the range [2^(k-1), 2^k).
   * <p>
   * This value MUST be set.<br/>
   * This value MUST NOT be empty.<br/>
   * This value MUST contain a valid hash.
   */
  bytes hints = 3;
}
